--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,11 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.dpaukov</groupId>
+            <artifactId>combinatoricslib3</artifactId>
+            <version>3.3.2</version>
+        </dependency>
     </dependencies>
 
     <properties>
